--- a/src/output.css
+++ b/src/output.css
@@ -718,18 +718,6 @@ html {
     --tw-text-opacity: 1;
     color: var(--fallback-nc,oklch(var(--nc)/var(--tw-text-opacity)));
   }
-
-  .table tr.hover:hover,
-  .table tr.hover:nth-child(even):hover {
-    --tw-bg-opacity: 1;
-    background-color: var(--fallback-b2,oklch(var(--b2)/var(--tw-bg-opacity)));
-  }
-
-  .table-zebra tr.hover:hover,
-  .table-zebra tr.hover:nth-child(even):hover {
-    --tw-bg-opacity: 1;
-    background-color: var(--fallback-b3,oklch(var(--b3)/var(--tw-bg-opacity)));
-  }
 }
 
 .btn {
@@ -932,18 +920,6 @@ html {
   @supports (color: oklch(0% 0 0)) {
     .btn-ghost:hover {
       background-color: var(--fallback-bc,oklch(var(--bc)/0.2));
-    }
-  }
-
-  .btn-outline.btn-primary:hover {
-    --tw-text-opacity: 1;
-    color: var(--fallback-pc,oklch(var(--pc)/var(--tw-text-opacity)));
-  }
-
-  @supports (color: color-mix(in oklab, black, black)) {
-    .btn-outline.btn-primary:hover {
-      background-color: color-mix(in oklab, var(--fallback-p,oklch(var(--p)/1)) 90%, black);
-      border-color: color-mix(in oklab, var(--fallback-p,oklch(var(--p)/1)) 90%, black);
     }
   }
 
@@ -1169,35 +1145,12 @@ html {
     background-color: var(--btn-color, var(--fallback-b2));
     border-color: var(--btn-color, var(--fallback-b2));
   }
-
-  .btn-primary {
-    --btn-color: var(--fallback-p);
-  }
-}
-
-@supports (color: color-mix(in oklab, black, black)) {
-  .btn-outline.btn-primary.btn-active {
-    background-color: color-mix(in oklab, var(--fallback-p,oklch(var(--p)/1)) 90%, black);
-    border-color: color-mix(in oklab, var(--fallback-p,oklch(var(--p)/1)) 90%, black);
-  }
 }
 
 .btn:focus-visible {
   outline-style: solid;
   outline-width: 2px;
   outline-offset: 2px;
-}
-
-.btn-primary {
-  --tw-text-opacity: 1;
-  color: var(--fallback-pc,oklch(var(--pc)/var(--tw-text-opacity)));
-  outline-color: var(--fallback-p,oklch(var(--p)/1));
-}
-
-@supports (color: oklch(0% 0 0)) {
-  .btn-primary {
-    --btn-color: var(--p);
-  }
 }
 
 .btn.glass {
@@ -1226,16 +1179,6 @@ html {
 .btn-ghost.btn-active {
   border-color: transparent;
   background-color: var(--fallback-bc,oklch(var(--bc)/0.2));
-}
-
-.btn-outline.btn-primary {
-  --tw-text-opacity: 1;
-  color: var(--fallback-p,oklch(var(--p)/var(--tw-text-opacity)));
-}
-
-.btn-outline.btn-primary.btn-active {
-  --tw-text-opacity: 1;
-  color: var(--fallback-pc,oklch(var(--pc)/var(--tw-text-opacity)));
 }
 
 .btn.btn-disabled,
@@ -1657,6 +1600,18 @@ html {
   position: relative;
 }
 
+.left-0 {
+  left: 0px;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.top-0 {
+  top: 0px;
+}
+
 .bottom-1 {
   bottom: 0.25rem;
 }
@@ -1665,24 +1620,12 @@ html {
   bottom: 1rem;
 }
 
-.left-0 {
-  left: 0px;
-}
-
 .left-1 {
   left: 0.25rem;
 }
 
-.right-0 {
-  right: 0px;
-}
-
 .right-1 {
   right: 0.25rem;
-}
-
-.top-0 {
-  top: 0px;
 }
 
 .z-0 {
@@ -1718,12 +1661,12 @@ html {
   margin-bottom: 1.25rem;
 }
 
-.me-2 {
-  margin-inline-end: 0.5rem;
-}
-
 .mt-20 {
   margin-top: 5rem;
+}
+
+.me-2 {
+  margin-inline-end: 0.5rem;
 }
 
 .mt-6 {
@@ -1740,6 +1683,10 @@ html {
 
 .grid {
   display: grid;
+}
+
+.hidden {
+  display: none;
 }
 
 .size-4 {
@@ -1775,6 +1722,15 @@ html {
   width: 3.5rem;
 }
 
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.w-full {
+  width: 100%;
+}
+
 .w-3\/4 {
   width: 75%;
 }
@@ -1789,15 +1745,6 @@ html {
 
 .w-96 {
   width: 24rem;
-}
-
-.w-fit {
-  width: -moz-fit-content;
-  width: fit-content;
-}
-
-.w-full {
-  width: 100%;
 }
 
 .max-w-md {
@@ -1903,16 +1850,16 @@ html {
   border-radius: var(--rounded-box, 1rem);
 }
 
-.rounded-lg {
-  border-radius: 0.5rem;
-}
-
 .rounded-md {
   border-radius: 0.375rem;
 }
 
 .rounded-sm {
   border-radius: 0.125rem;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
 }
 
 .rounded-b-lg {
@@ -1937,21 +1884,6 @@ html {
 .border-TEAL_NORMAL {
   --tw-border-opacity: 1;
   border-color: rgb(0 135 158 / var(--tw-border-opacity, 1));
-}
-
-.bg-RED_LIGHT {
-  --tw-bg-opacity: 1;
-  background-color: rgb(247 233 233 / var(--tw-bg-opacity, 1));
-}
-
-.bg-TEAL_DARKER {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 47 55 / var(--tw-bg-opacity, 1));
-}
-
-.bg-TEAL_LIGHT {
-  --tw-bg-opacity: 1;
-  background-color: rgb(230 243 245 / var(--tw-bg-opacity, 1));
 }
 
 .bg-TEAL_LIGHT_ACTIVE {
@@ -1982,6 +1914,21 @@ html {
 .bg-RED_DARKER {
   --tw-bg-opacity: 1;
   background-color: rgb(62 12 12 / var(--tw-bg-opacity, 1));
+}
+
+.bg-RED_LIGHT {
+  --tw-bg-opacity: 1;
+  background-color: rgb(247 233 233 / var(--tw-bg-opacity, 1));
+}
+
+.bg-TEAL_DARKER {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 47 55 / var(--tw-bg-opacity, 1));
+}
+
+.bg-TEAL_LIGHT {
+  --tw-bg-opacity: 1;
+  background-color: rgb(230 243 245 / var(--tw-bg-opacity, 1));
 }
 
 .bg-\[url\(assets\/bg\.png\)\] {
@@ -2028,6 +1975,16 @@ html {
   padding-right: 0.25rem;
 }
 
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.py-20 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
@@ -2048,11 +2005,6 @@ html {
   padding-right: 16rem;
 }
 
-.py-20 {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-}
-
 .pb-24 {
   padding-bottom: 6rem;
 }
@@ -2065,8 +2017,16 @@ html {
   padding-bottom: 15rem;
 }
 
+.pt-20 {
+  padding-top: 5rem;
+}
+
 .pt-5 {
   padding-top: 1.25rem;
+}
+
+.text-left {
+  text-align: left;
 }
 
 .text-center {
@@ -2082,14 +2042,9 @@ html {
   line-height: 2.25rem;
 }
 
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
-}
-
-.text-7xl {
-  font-size: 4.5rem;
-  line-height: 1;
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .text-sm {
@@ -2102,14 +2057,24 @@ html {
   line-height: 1.75rem;
 }
 
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
+.text-7xl {
+  font-size: 4.5rem;
+  line-height: 1;
+}
+
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .font-bold {
@@ -2141,16 +2106,6 @@ html {
   color: rgb(255 254 251 / var(--tw-text-opacity, 1));
 }
 
-.text-ORANGE_DARKER {
-  --tw-text-opacity: 1;
-  color: rgb(89 60 32 / var(--tw-text-opacity, 1));
-}
-
-.text-RED_DARKER {
-  --tw-text-opacity: 1;
-  color: rgb(62 12 12 / var(--tw-text-opacity, 1));
-}
-
 .text-TEAL_DARK {
   --tw-text-opacity: 1;
   color: rgb(0 101 119 / var(--tw-text-opacity, 1));
@@ -2171,18 +2126,14 @@ html {
   color: rgb(0 135 158 / var(--tw-text-opacity, 1));
 }
 
-.text-base-content\/50 {
-  color: var(--fallback-bc,oklch(var(--bc)/0.5));
-}
-
 .text-neutral-content {
   --tw-text-opacity: 1;
   color: var(--fallback-nc,oklch(var(--nc)/var(--tw-text-opacity, 1)));
 }
 
-.text-success {
+.text-ORANGE_DARKER {
   --tw-text-opacity: 1;
-  color: var(--fallback-su,oklch(var(--su)/var(--tw-text-opacity, 1)));
+  color: rgb(89 60 32 / var(--tw-text-opacity, 1));
 }
 
 .text-ORANGE_LIGHT {
@@ -2190,13 +2141,19 @@ html {
   color: rgb(255 247 239 / var(--tw-text-opacity, 1));
 }
 
+.text-RED_DARKER {
+  --tw-text-opacity: 1;
+  color: rgb(62 12 12 / var(--tw-text-opacity, 1));
+}
+
 .text-RED_LIGHT {
   --tw-text-opacity: 1;
   color: rgb(247 233 233 / var(--tw-text-opacity, 1));
 }
 
-.line-through {
-  text-decoration-line: line-through;
+.text-success {
+  --tw-text-opacity: 1;
+  color: var(--fallback-su,oklch(var(--su)/var(--tw-text-opacity, 1)));
 }
 
 .antialiased {
@@ -2210,10 +2167,6 @@ html {
 
 .opacity-100 {
   opacity: 1;
-}
-
-.opacity-50 {
-  opacity: 0.5;
 }
 
 .mix-blend-difference {
@@ -2271,6 +2224,11 @@ body{
   border-radius: 0.375rem;
 }
 
+.hover\:border-TEAL_LIGHT_ACTIVE:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(176 218 225 / var(--tw-border-opacity, 1));
+}
+
 .hover\:border-ORANGE_NORMAL:hover {
   --tw-border-opacity: 1;
   border-color: rgb(255 171 91 / var(--tw-border-opacity, 1));
@@ -2281,29 +2239,9 @@ body{
   border-color: rgb(178 34 34 / var(--tw-border-opacity, 1));
 }
 
-.hover\:border-TEAL_LIGHT_ACTIVE:hover {
-  --tw-border-opacity: 1;
-  border-color: rgb(176 218 225 / var(--tw-border-opacity, 1));
-}
-
 .hover\:border-TEAL_NORMAL:hover {
   --tw-border-opacity: 1;
   border-color: rgb(0 135 158 / var(--tw-border-opacity, 1));
-}
-
-.hover\:bg-ORANGE_DARKER:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(89 60 32 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-RED_DARKER:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(62 12 12 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-TEAL_DARKER:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 47 55 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:bg-TEAL_LIGHT_ACTIVE:hover {
@@ -2316,9 +2254,9 @@ body{
   background-color: rgb(0 122 142 / var(--tw-bg-opacity, 1));
 }
 
-.hover\:bg-TEAL_LIGHT:hover {
+.hover\:bg-ORANGE_DARKER:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(230 243 245 / var(--tw-bg-opacity, 1));
+  background-color: rgb(89 60 32 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:bg-ORANGE_LIGHT:hover {
@@ -2326,24 +2264,24 @@ body{
   background-color: rgb(255 247 239 / var(--tw-bg-opacity, 1));
 }
 
+.hover\:bg-RED_DARKER:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(62 12 12 / var(--tw-bg-opacity, 1));
+}
+
 .hover\:bg-RED_LIGHT:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(247 233 233 / var(--tw-bg-opacity, 1));
 }
 
-.hover\:text-ORANGE_LIGHT:hover {
-  --tw-text-opacity: 1;
-  color: rgb(255 247 239 / var(--tw-text-opacity, 1));
+.hover\:bg-TEAL_DARKER:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 47 55 / var(--tw-bg-opacity, 1));
 }
 
-.hover\:text-RED_LIGHT:hover {
-  --tw-text-opacity: 1;
-  color: rgb(247 233 233 / var(--tw-text-opacity, 1));
-}
-
-.hover\:text-TEAL_LIGHT:hover {
-  --tw-text-opacity: 1;
-  color: rgb(230 243 245 / var(--tw-text-opacity, 1));
+.hover\:bg-TEAL_LIGHT:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(230 243 245 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:text-neutral-50:hover {
@@ -2351,19 +2289,34 @@ body{
   color: rgb(250 250 250 / var(--tw-text-opacity, 1));
 }
 
-.hover\:text-TEAL_DARKER:hover {
-  --tw-text-opacity: 1;
-  color: rgb(0 47 55 / var(--tw-text-opacity, 1));
-}
-
 .hover\:text-ORANGE_DARKER:hover {
   --tw-text-opacity: 1;
   color: rgb(89 60 32 / var(--tw-text-opacity, 1));
 }
 
+.hover\:text-ORANGE_LIGHT:hover {
+  --tw-text-opacity: 1;
+  color: rgb(255 247 239 / var(--tw-text-opacity, 1));
+}
+
 .hover\:text-RED_DARKER:hover {
   --tw-text-opacity: 1;
   color: rgb(62 12 12 / var(--tw-text-opacity, 1));
+}
+
+.hover\:text-RED_LIGHT:hover {
+  --tw-text-opacity: 1;
+  color: rgb(247 233 233 / var(--tw-text-opacity, 1));
+}
+
+.hover\:text-TEAL_DARKER:hover {
+  --tw-text-opacity: 1;
+  color: rgb(0 47 55 / var(--tw-text-opacity, 1));
+}
+
+.hover\:text-TEAL_LIGHT:hover {
+  --tw-text-opacity: 1;
+  color: rgb(230 243 245 / var(--tw-text-opacity, 1));
 }
 
 .hover\:shadow-2xl:hover {
@@ -2404,4 +2357,73 @@ body{
 
 .group:hover .group-hover\:opacity-100 {
   opacity: 1;
+}
+
+@media (min-width: 768px) {
+  .md\:block {
+    display: block;
+  }
+
+  .md\:w-3\/4 {
+    width: 75%;
+  }
+
+  .md\:w-4\/6 {
+    width: 66.666667%;
+  }
+
+  .md\:w-96 {
+    width: 24rem;
+  }
+
+  .md\:flex-row {
+    flex-direction: row;
+  }
+
+  .md\:p-0 {
+    padding: 0px;
+  }
+
+  .md\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .md\:px-10 {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+
+  .md\:px-24 {
+    padding-left: 6rem;
+    padding-right: 6rem;
+  }
+
+  .md\:px-28 {
+    padding-left: 7rem;
+    padding-right: 7rem;
+  }
+
+  .md\:px-64 {
+    padding-left: 16rem;
+    padding-right: 16rem;
+  }
+
+  .md\:pt-0 {
+    padding-top: 0px;
+  }
+
+  .md\:text-right {
+    text-align: right;
+  }
+
+  .md\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  .md\:text-7xl {
+    font-size: 4.5rem;
+    line-height: 1;
+  }
 }
