--- a/src/output.css
+++ b/src/output.css
@@ -1600,18 +1600,6 @@ html {
   position: relative;
 }
 
-.left-0 {
-  left: 0px;
-}
-
-.right-0 {
-  right: 0px;
-}
-
-.top-0 {
-  top: 0px;
-}
-
 .bottom-1 {
   bottom: 0.25rem;
 }
@@ -1620,12 +1608,24 @@ html {
   bottom: 1rem;
 }
 
+.left-0 {
+  left: 0px;
+}
+
 .left-1 {
   left: 0.25rem;
 }
 
+.right-0 {
+  right: 0px;
+}
+
 .right-1 {
   right: 0.25rem;
+}
+
+.top-0 {
+  top: 0px;
 }
 
 .z-0 {
@@ -1661,12 +1661,16 @@ html {
   margin-bottom: 1.25rem;
 }
 
+.me-2 {
+  margin-inline-end: 0.5rem;
+}
+
 .mt-20 {
   margin-top: 5rem;
 }
 
-.me-2 {
-  margin-inline-end: 0.5rem;
+.mt-5 {
+  margin-top: 1.25rem;
 }
 
 .mt-6 {
@@ -1683,10 +1687,6 @@ html {
 
 .grid {
   display: grid;
-}
-
-.hidden {
-  display: none;
 }
 
 .size-4 {
@@ -1722,15 +1722,6 @@ html {
   width: 3.5rem;
 }
 
-.w-fit {
-  width: -moz-fit-content;
-  width: fit-content;
-}
-
-.w-full {
-  width: 100%;
-}
-
 .w-3\/4 {
   width: 75%;
 }
@@ -1745,6 +1736,15 @@ html {
 
 .w-96 {
   width: 24rem;
+}
+
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.w-full {
+  width: 100%;
 }
 
 .max-w-md {
@@ -1850,16 +1850,16 @@ html {
   border-radius: var(--rounded-box, 1rem);
 }
 
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
 .rounded-md {
   border-radius: 0.375rem;
 }
 
 .rounded-sm {
   border-radius: 0.125rem;
-}
-
-.rounded-lg {
-  border-radius: 0.5rem;
 }
 
 .rounded-b-lg {
@@ -1886,26 +1886,6 @@ html {
   border-color: rgb(0 135 158 / var(--tw-border-opacity, 1));
 }
 
-.bg-TEAL_LIGHT_ACTIVE {
-  --tw-bg-opacity: 1;
-  background-color: rgb(176 218 225 / var(--tw-bg-opacity, 1));
-}
-
-.bg-TEAL_NORMAL {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 135 158 / var(--tw-bg-opacity, 1));
-}
-
-.bg-base-100 {
-  --tw-bg-opacity: 1;
-  background-color: var(--fallback-b1,oklch(var(--b1)/var(--tw-bg-opacity, 1)));
-}
-
-.bg-neutral {
-  --tw-bg-opacity: 1;
-  background-color: var(--fallback-n,oklch(var(--n)/var(--tw-bg-opacity, 1)));
-}
-
 .bg-ORANGE_DARKER {
   --tw-bg-opacity: 1;
   background-color: rgb(89 60 32 / var(--tw-bg-opacity, 1));
@@ -1929,6 +1909,26 @@ html {
 .bg-TEAL_LIGHT {
   --tw-bg-opacity: 1;
   background-color: rgb(230 243 245 / var(--tw-bg-opacity, 1));
+}
+
+.bg-TEAL_LIGHT_ACTIVE {
+  --tw-bg-opacity: 1;
+  background-color: rgb(176 218 225 / var(--tw-bg-opacity, 1));
+}
+
+.bg-TEAL_NORMAL {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 135 158 / var(--tw-bg-opacity, 1));
+}
+
+.bg-base-100 {
+  --tw-bg-opacity: 1;
+  background-color: var(--fallback-b1,oklch(var(--b1)/var(--tw-bg-opacity, 1)));
+}
+
+.bg-neutral {
+  --tw-bg-opacity: 1;
+  background-color: var(--fallback-n,oklch(var(--n)/var(--tw-bg-opacity, 1)));
 }
 
 .bg-\[url\(assets\/bg\.png\)\] {
@@ -1975,16 +1975,6 @@ html {
   padding-right: 0.25rem;
 }
 
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-.py-20 {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-}
-
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
@@ -2005,6 +1995,11 @@ html {
   padding-right: 16rem;
 }
 
+.py-20 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+
 .pb-24 {
   padding-bottom: 6rem;
 }
@@ -2017,24 +2012,8 @@ html {
   padding-bottom: 15rem;
 }
 
-.pt-20 {
-  padding-top: 5rem;
-}
-
 .pt-5 {
   padding-top: 1.25rem;
-}
-
-.pt-10 {
-  padding-top: 2.5rem;
-}
-
-.pt-1 {
-  padding-top: 0.25rem;
-}
-
-.text-left {
-  text-align: left;
 }
 
 .text-center {
@@ -2045,29 +2024,14 @@ html {
   text-align: right;
 }
 
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .text-5xl {
@@ -2078,6 +2042,16 @@ html {
 .text-7xl {
   font-size: 4.5rem;
   line-height: 1;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .text-xs {
@@ -2114,6 +2088,26 @@ html {
   color: rgb(255 254 251 / var(--tw-text-opacity, 1));
 }
 
+.text-ORANGE_DARKER {
+  --tw-text-opacity: 1;
+  color: rgb(89 60 32 / var(--tw-text-opacity, 1));
+}
+
+.text-ORANGE_LIGHT {
+  --tw-text-opacity: 1;
+  color: rgb(255 247 239 / var(--tw-text-opacity, 1));
+}
+
+.text-RED_DARKER {
+  --tw-text-opacity: 1;
+  color: rgb(62 12 12 / var(--tw-text-opacity, 1));
+}
+
+.text-RED_LIGHT {
+  --tw-text-opacity: 1;
+  color: rgb(247 233 233 / var(--tw-text-opacity, 1));
+}
+
 .text-TEAL_DARK {
   --tw-text-opacity: 1;
   color: rgb(0 101 119 / var(--tw-text-opacity, 1));
@@ -2137,26 +2131,6 @@ html {
 .text-neutral-content {
   --tw-text-opacity: 1;
   color: var(--fallback-nc,oklch(var(--nc)/var(--tw-text-opacity, 1)));
-}
-
-.text-ORANGE_DARKER {
-  --tw-text-opacity: 1;
-  color: rgb(89 60 32 / var(--tw-text-opacity, 1));
-}
-
-.text-ORANGE_LIGHT {
-  --tw-text-opacity: 1;
-  color: rgb(255 247 239 / var(--tw-text-opacity, 1));
-}
-
-.text-RED_DARKER {
-  --tw-text-opacity: 1;
-  color: rgb(62 12 12 / var(--tw-text-opacity, 1));
-}
-
-.text-RED_LIGHT {
-  --tw-text-opacity: 1;
-  color: rgb(247 233 233 / var(--tw-text-opacity, 1));
 }
 
 .text-success {
@@ -2232,11 +2206,6 @@ body{
   border-radius: 0.375rem;
 }
 
-.hover\:border-TEAL_LIGHT_ACTIVE:hover {
-  --tw-border-opacity: 1;
-  border-color: rgb(176 218 225 / var(--tw-border-opacity, 1));
-}
-
 .hover\:border-ORANGE_NORMAL:hover {
   --tw-border-opacity: 1;
   border-color: rgb(255 171 91 / var(--tw-border-opacity, 1));
@@ -2247,19 +2216,14 @@ body{
   border-color: rgb(178 34 34 / var(--tw-border-opacity, 1));
 }
 
+.hover\:border-TEAL_LIGHT_ACTIVE:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(176 218 225 / var(--tw-border-opacity, 1));
+}
+
 .hover\:border-TEAL_NORMAL:hover {
   --tw-border-opacity: 1;
   border-color: rgb(0 135 158 / var(--tw-border-opacity, 1));
-}
-
-.hover\:bg-TEAL_LIGHT_ACTIVE:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(176 218 225 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-TEAL_NORMAL_HOVER:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 122 142 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:bg-ORANGE_DARKER:hover {
@@ -2292,9 +2256,14 @@ body{
   background-color: rgb(230 243 245 / var(--tw-bg-opacity, 1));
 }
 
-.hover\:text-neutral-50:hover {
-  --tw-text-opacity: 1;
-  color: rgb(250 250 250 / var(--tw-text-opacity, 1));
+.hover\:bg-TEAL_LIGHT_ACTIVE:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(176 218 225 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-TEAL_NORMAL_HOVER:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 122 142 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:text-ORANGE_DARKER:hover {
@@ -2325,6 +2294,11 @@ body{
 .hover\:text-TEAL_LIGHT:hover {
   --tw-text-opacity: 1;
   color: rgb(230 243 245 / var(--tw-text-opacity, 1));
+}
+
+.hover\:text-neutral-50:hover {
+  --tw-text-opacity: 1;
+  color: rgb(250 250 250 / var(--tw-text-opacity, 1));
 }
 
 .hover\:shadow-2xl:hover {
@@ -2365,73 +2339,4 @@ body{
 
 .group:hover .group-hover\:opacity-100 {
   opacity: 1;
-}
-
-@media (min-width: 768px) {
-  .md\:block {
-    display: block;
-  }
-
-  .md\:w-3\/4 {
-    width: 75%;
-  }
-
-  .md\:w-4\/6 {
-    width: 66.666667%;
-  }
-
-  .md\:w-96 {
-    width: 24rem;
-  }
-
-  .md\:flex-row {
-    flex-direction: row;
-  }
-
-  .md\:p-0 {
-    padding: 0px;
-  }
-
-  .md\:px-0 {
-    padding-left: 0px;
-    padding-right: 0px;
-  }
-
-  .md\:px-10 {
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-  }
-
-  .md\:px-24 {
-    padding-left: 6rem;
-    padding-right: 6rem;
-  }
-
-  .md\:px-28 {
-    padding-left: 7rem;
-    padding-right: 7rem;
-  }
-
-  .md\:px-64 {
-    padding-left: 16rem;
-    padding-right: 16rem;
-  }
-
-  .md\:pt-0 {
-    padding-top: 0px;
-  }
-
-  .md\:text-right {
-    text-align: right;
-  }
-
-  .md\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
-  }
-
-  .md\:text-7xl {
-    font-size: 4.5rem;
-    line-height: 1;
-  }
 }
